--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <a href="#">Visit</a>
                 </div>
                 <div class="projects-card">
-                    <img src="/images/learn-css/meal.png" alt="Project Image">
+                    <img src="#" alt="Project Image">
                     <h3>2048 Game</h3>
                     <p>2048 is a simple yet addictive puzzle game where players combine matching tiles to reach the number 2048.</p>
                     <a href="#">Visit</a>
